# Kalshi-Back-testing

./: CMakeLists.txt  README.md
.cursor/agents/: cpp-backtester-implementation-research-agent.md  cpp-code-reviewer.md  cpp-memory-optimizer.md  cpp-test-designer.md  finance-research.md  kalshi-data-validator.md  kalshi-research.md
build-linux/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  kalshi_backtest  kalshi_backtest_tests
data/high_vol_week_1m/: kxhighchi_week_1m.csv  kxhighny_week_1m.csv  kxhightatl_week_1m.csv
data/tmp_100k_fetch/: KXHIGHCHI-25DEC12-T28.csv  KXHIGHCHI-25DEC13-T18.csv  KXHIGHCHI-25DEC14-B12.5.csv  KXHIGHCHI-25DEC15-B23.5.csv  KXHIGHCHI-25DEC16-B37.5.csv  KXHIGHCHI-25DEC17-B38.5.csv  KXHIGHCHI-25DEC18-B50.5.csv  KXHIGHCHI-25DEC19-T24.csv  KXHIGHCHI-25DEC20-B39.5.csv  KXHIGHCHI-25DEC21-B31.5.csv  KXHIGHCHI-25DEC22-B42.5.csv  KXHIGHCHI-25DEC23-B51.5.csv  KXHIGHCHI-25DEC24-T47.csv  KXHIGHCHI-25DEC25-B42.5.csv  KXHIGHCHI-25DEC26-T49.csv  KXHIGHCHI-25DEC27-T45.csv  (+38 more)
docs/: DESIGN.md  SPIKE_FADE_MARKETS.md
include/: csv_reader.hpp  engine.hpp  engine_v2.hpp  execution.hpp  kalshi_fetch.hpp  metrics.hpp  portfolio.hpp  resting_order.hpp  rolling_stats.hpp  strategy.hpp  sweep.hpp  tick_logger.hpp
scripts/: dev_run_all.ps1  run_backtest.ps1  run_tests.ps1  view_outputs.ps1
src/: cli.cpp  csv_reader.cpp  engine.cpp  engine_v2.cpp  execution.cpp  kalshi_fetch.cpp  main.cpp  sweep.cpp
tests/: test_common.hpp  test_execution.cpp  test_main.cpp  test_max_drawdown.cpp  test_portfolio.cpp  test_resting_order.cpp  test_rolling_stats.cpp  test_spike_detection.cpp  test_sweep_analysis.cpp  test_sweep_grid.cpp
(+1 files in other folders)
